sumo/tests/marouter/errors/incomplete_connections/to_missing2of2_allowed/errors.marouter
Error: District '2' has no sink.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
Warning: No connection between '2-source' and '1-sink' found.
